--- a/client/src/css/main.css
+++ b/client/src/css/main.css
@@ -16,10 +16,10 @@
 }
 
 .glassMorphism {
-    background: rgba( 230, 230, 230, 0.4 );
-    box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
-    backdrop-filter: blur( 5.0px );
-    -webkit-backdrop-filter: blur( 5.0px );
+    background: rgba( 255, 255, 255, 0.34 );
+    box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.35 );
+    backdrop-filter: blur( 15.0px );
+    -webkit-backdrop-filter: blur( 15.0px );
     border-radius: 10px;
     border: 1px solid rgba( 255, 255, 255, 0.18 );
 }
@@ -41,22 +41,28 @@ body {
 
 .main-sidebar-container {
   grid-area: a;
+  height: 95vh;
 }
 
 .main-page-container {
   grid-area: b;
+  margin-right: 15px;
+  margin-top: 15px;
+  height: 95vh;
+  overflow: visible;
 }
 
 /* in each Page-Component*/
 
 .main-page-general-styling {
-  height: 100vh;
+  min-height: 95vh;
   width: 100%;
   display: grid;
   grid-template-areas: "header" "innerContent";
   grid-template-columns: 1fr;
   grid-template-rows: 1fr 15fr;
-  justify-items: center;
+  gap: 15px;
+  justify-content: center;
   background-color: var(--pageHeaderColor);
   background: rgba(0, 0, 0, 0);
 
@@ -66,12 +72,10 @@ body {
 .main-page-header {
   grid-area: header;
   display: flex;
-  background-color: var(--pageHeaderColor);
   width: 100%;
   height: 100%;
   justify-content: center;
   align-items: center;
-  background: rgba(0, 0, 0, 0);
 }
 
 .main-page-header h2 {
@@ -79,7 +83,6 @@ body {
   min-height: 40px;
   margin: 0px;
   color: var(--white);
-  background: rgba(0, 0, 0, 0);
 }
 
 .main-page-inner-container {
@@ -90,17 +93,12 @@ body {
   min-height: 460px;
   max-height: 93.75vh;
   /* 15fr/16fr = 93.75 */
-  padding: 1em;
-  display: grid;
-  background-color: var(--pageInnerColor);
-  background: rgba(0, 0, 0, 0);
 }
 
 .main-page-content {
-  background-color: var(--white);
+  border-radius: 9px 9px 9px 9px;
   width: 100%;
   height: 100%;
   overflow-y: auto;
   -webkit-overflow-scrolling: touch;
-  background: rgba(0, 0, 0, 0);
 }
