--- a/client/src/pages/css/toplistpage.css
+++ b/client/src/pages/css/toplistpage.css
@@ -1,11 +1,11 @@
 .top-page-content {
-  background: var(--pageInnerColor) !important;
+  min-height: 100%;
   display: grid;
   grid-template-areas: "top-reader-card top-book-card my-points my-recommendation" "top-lists top-lists top-lists top-lists";
   grid-template-columns: 1fr 1fr 1fr 1fr;
   grid-template-rows: 1fr 3fr;
-  gap: 1em;
-  background:rgba(255, 255,255, 0.5) !important;
+  grid-gap: 1em;
+  background:rgba(255, 255,255, 0) !important;
 }
 
 .top-top-reader-card, .top-top-book-card, .top-my-points, .top-my-recommendation {
