--- a/client/src/css/main.css
+++ b/client/src/css/main.css
@@ -26,41 +26,46 @@
 
 /* in Laskuppen-Component */
 body {
-  overflow-x: hidden;
   background-image: var(--backgroundGradient);
 }
 .main-general-styling {
   background: rgba(0, 0, 0, 0);
   display: grid;
   grid-template: "a b";
-  grid-template-rows: 1fr;
+  grid-template-rows: 95vh;
   grid-template-columns: 1fr 5fr;
+  max-height: 100vh;
   height: 100vh;
   width: 100vw;
+  overflow-x: auto;
 }
 
 .main-sidebar-container {
   grid-area: a;
-  height: 95vh;
 }
 
 .main-page-container {
   grid-area: b;
   margin-right: 15px;
   margin-top: 15px;
-  height: 95vh;
+  height: 95%;
+  max-height: 95%;
   overflow: visible;
+}
+
+.page-holder{
+  max-height: 100%;
 }
 
 /* in each Page-Component*/
 
 .main-page-general-styling {
+  max-height: 95vh;
+  height: 95vh;
   min-height: 95vh;
-  width: 100%;
   display: grid;
   grid-template-areas: "header" "innerContent";
-  grid-template-columns: 1fr;
-  grid-template-rows: 1fr 15fr;
+  grid-template-rows: 0.6fr 10fr;
   gap: 15px;
   justify-content: center;
   background-color: var(--pageHeaderColor);
@@ -72,33 +77,24 @@ body {
 .main-page-header {
   grid-area: header;
   display: flex;
-  width: 100%;
-  height: 100%;
   justify-content: center;
   align-items: center;
 }
 
 .main-page-header h2 {
-  font-size: 30px;
-  min-height: 40px;
-  margin: 0px;
   color: var(--white);
 }
 
 .main-page-inner-container {
+  max-height: 100%;
+  height: 100%;
+  min-height: 100%;
   border-radius: 10px 10px 0px 0px;
   grid-area: innerContent;
-  width: 100%;
-  height: 100%;
-  min-height: 460px;
-  max-height: 93.75vh;
-  /* 15fr/16fr = 93.75 */
 }
 
 .main-page-content {
   border-radius: 9px 9px 9px 9px;
   width: 100%;
-  height: 100%;
-  overflow-y: auto;
   -webkit-overflow-scrolling: touch;
 }
