--- a/client/src/pages/css/toplistpage.css
+++ b/client/src/pages/css/toplistpage.css
@@ -1,7 +1,10 @@
 .top-page-content {
   min-height: 100%;
+  max-height: 100%;
   display: grid;
-  grid-template-areas: "top-reader-card top-book-card my-points my-recommendation" "top-lists top-lists top-lists top-lists";
+  grid-template-areas: 
+  "top-reader-card top-book-card my-points my-recommendation" 
+  "top-lists top-lists top-lists top-lists";
   grid-template-columns: 1fr 1fr 1fr 1fr;
   grid-template-rows: 1fr 3fr;
   grid-gap: 1em;
@@ -73,9 +76,8 @@
 
 .top-filter-label {
   grid-area: filter;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  align-self: center;
+  justify-self: center;
 }
 
 .top-nameButton {
