--- a/client/src/components/css/bookspagedetails.css
+++ b/client/src/components/css/bookspagedetails.css
@@ -1,39 +1,28 @@
 .bpd-page-content {
   min-height: 100%;
+  max-height: 100%;
   display: grid;
   grid-template:
     "buttonBack buttonBack"
     "desc info"
     "reviews reviews";
   grid-template-columns: 1fr 1fr;
-  grid-template-rows: 0.2fr 1fr 3fr;
+  grid-template-rows: 0.1fr 1fr 3fr;
+  column-gap: 5%;
 }
-
 .description {
-  border: solid;
-  border-radius: 9px 9px 9px 9px;
-  border-color: blueviolet;
 
   grid-area: desc;
   padding: 5%;
-  max-width: 80%;
-  min-width: 80%;
-  justify-self: center;
   justify-content: center;
   align-content: center;
 }
 
 .information {
-  border: solid;
-  border-radius: 9px 9px 9px 9px;
-  border-color: blueviolet;
 
   padding: 5%;
-  justify-self: center;
   justify-content: center;
   align-content: center;
-  max-width: 80%;
-  min-width: 80%;
   grid-area: info;
 
   row-gap: 5%;
@@ -64,6 +53,7 @@
 
 .reviews {
   grid-area: reviews;
+  overflow-y: scroll;
 }
 
 .title {
@@ -85,13 +75,7 @@
 }
 
 .review-container {
-  margin-left: 5%;
-  margin-right: 5%;
-  margin-top: 3%;
-  margin-bottom: 3%;
-  border: solid;
-  border-radius: 9px 9px 9px 9px;
-  border-color: blueviolet;
+  margin-top: 1%;
   grid-area: review;
   display: grid;
   grid-template:
@@ -117,6 +101,6 @@
 }
 
 h1 {
-  margin-top: 5%;
+  margin-top: 5px;
   margin-left: 5%;
 }
