--- a/client/src/components/css/choosebook.css
+++ b/client/src/components/css/choosebook.css
@@ -1,11 +1,12 @@
 .cbc-page-content {
-    background: var(--pageInnerColor) !important;
     width: 100%;
     height: 100%;
     display: grid;
-    grid-template-areas: "b c d";
-    grid-template-columns:  1fr 1fr 1fr;
-    grid-template-rows: 1fr;
+    grid-template-areas: 
+    "b c"
+    "b d";
+    grid-template-columns:  2.7fr 1fr;
+    grid-template-rows: 1fr 1fr;
     gap: 1em;
 }
 
@@ -17,14 +18,15 @@
     background-color: var(--background);
     border-radius: 9px 9px 9px 9px;
     border: var(--borders);
-    overflow-y: auto;
-    overflow-x: hidden;
-    -webkit-overflow-scrolling: touch;
     display:flex;
     flex-direction: column;
     min-width: 200px;
     padding: 5px 5px 0px 5px;
     align-items: center;
+}
+
+.cbc-search-result{
+    overflow-y: auto;
 }
 
 
@@ -56,23 +58,25 @@
 }
 
 .cbc-book:hover {
-    background-color: var(--backgroundHover);
+    background-color: #d57eeb48;
     cursor: pointer;
 }
 
 .cbc-book {
     display: grid;
-    grid-template-areas: "a d" "b d" "c d";
+    grid-template-areas: 
+    "a d" 
+    "b d" 
+    "c d";
     grid-template-columns: 4fr 2fr;
     grid-template-rows: 1fr 1fr 1fr;
     padding: 10px;
     width: 100%;
-    height: 20vh;
-    min-height: 70px;
-    background-color: var(--background);
-    border: var(--borders);
-    border-radius: 10px;
-    margin: 10px 0px;
+    height: 17vh;
+    min-height: 50px;
+    margin-top: 15px;
+    overflow-y: hidden;
+   justify-self: center;
 }
 
 .cbc-book-title {
@@ -90,10 +94,11 @@
 .cbc-book-img {
     grid-area: d;
     padding: 1em;
+    justify-self: end;
 }
 
 .cbc-book-img img {
-    width: 100%;
     height: 100%;
+    max-width: 60px;
 }
 
