--- a/client/src/css/main.css
+++ b/client/src/css/main.css
@@ -16,20 +16,21 @@
 }
 
 .glassMorphism {
-    background: rgba( 255, 255, 255, 0.34 );
+    background: rgba( 255, 255, 255, 0.35 );
     box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.35 );
     backdrop-filter: blur( 15.0px );
     -webkit-backdrop-filter: blur( 15.0px );
     border-radius: 10px;
-    border: 1px solid rgba( 255, 255, 255, 0.18 );
+    border: 3px solid rgba(255, 255, 255, 0.274);
 }
 
 /* in Laskuppen-Component */
 body {
-  background-image: var(--backgroundGradient);
+  
 }
 .main-general-styling {
-  background: rgba(0, 0, 0, 0);
+
+  background-image: var(--backgroundGradient);
   display: grid;
   grid-template: "a b";
   grid-template-rows: 95vh;
@@ -63,19 +64,22 @@ body {
   max-height: 95vh;
   height: 95vh;
   min-height: 95vh;
+  width: 100%;
   display: grid;
   grid-template-areas: "header" "innerContent";
   grid-template-rows: 0.6fr 10fr;
+  grid-template-columns: 1fr;
   gap: 15px;
-  justify-content: center;
-  background-color: var(--pageHeaderColor);
-  background: rgba(0, 0, 0, 0);
+  justify-items: center;
+  align-items: center;
 
   /* SHOULD NOT SEE RED ANYWHERE!! */
 }
 
 .main-page-header {
   grid-area: header;
+  min-width: 93%;
+  max-width: 93%;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -89,6 +93,8 @@ body {
   max-height: 100%;
   height: 100%;
   min-height: 100%;
+  min-width: 93%;
+  max-width: 93%;
   border-radius: 10px 10px 0px 0px;
   grid-area: innerContent;
 }
