--- a/client/src/pages/css/bookspage.css
+++ b/client/src/pages/css/bookspage.css
@@ -1,5 +1,6 @@
 .books-content-grid{
     display: grid;
+    max-height: 100%;
     min-height: 100%;
     grid-template-areas: 
     "searchbar filter"
